// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDataSetCategories returns chart data categorised by filters 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 0.19,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 0.22,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 0.25,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 0.29,
      },
    },
    "filter": CategoryFilter {
      "category": "Characteristic",
      "group": "Gender",
      "isTotal": false,
      "label": "Gender female",
      "value": "filter-1",
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 1.54,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 1.78,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 1.92,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 2.09,
      },
    },
    "filter": CategoryFilter {
      "category": "Characteristic",
      "group": "Gender",
      "isTotal": false,
      "label": "Gender male",
      "value": "filter-3",
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 1.54,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 1.78,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 1.92,
      },
      "{\\"filters\\":[],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 2.09,
      },
    },
    "filter": CategoryFilter {
      "category": "School type",
      "group": "Default",
      "isTotal": false,
      "label": "State-funded primary",
      "value": "filter-2",
    },
  },
]
`;

exports[`createDataSetCategories returns chart data categorised by indicators 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 1.54,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 1.78,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 1.92,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"location\\":\\"country_E92000001\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 2.09,
      },
    },
    "filter": Indicator {
      "group": undefined,
      "label": "Fixed period exclusion rate",
      "unit": "%",
      "value": "indicator-1",
    },
  },
]
`;

exports[`createDataSetCategories returns chart data categorised by locations 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2012_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 1.54,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2013_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 1.78,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2014_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 1.92,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\",\\"timePeriod\\":\\"2015_AY\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": LocationFilter {
            "geoJson": Array [],
            "group": undefined,
            "label": "England",
            "level": "country",
            "value": "E92000001",
          },
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 2.09,
      },
    },
    "filter": LocationFilter {
      "geoJson": Array [],
      "group": undefined,
      "label": "England",
      "level": "country",
      "value": "E92000001",
    },
  },
]
`;

exports[`createDataSetCategories returns chart data categorised by time periods 1`] = `
Array [
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 0.19,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2012/13",
            "value": "2012_AY",
            "year": 2012,
          },
        },
        "value": 1.54,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2012/13",
      "value": "2012_AY",
      "year": 2012,
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 0.22,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2013/14",
            "value": "2013_AY",
            "year": 2013,
          },
        },
        "value": 1.78,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2013/14",
      "value": "2013_AY",
      "year": 2013,
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 0.25,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2014/15",
            "value": "2014_AY",
            "year": 2014,
          },
        },
        "value": 1.92,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2014/15",
      "value": "2014_AY",
      "year": 2014,
    },
  },
  Object {
    "dataSets": Object {
      "{\\"filters\\":[\\"filter-1\\",\\"filter-2\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender female",
              "value": "filter-1",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 0.29,
      },
      "{\\"filters\\":[\\"filter-2\\",\\"filter-3\\"],\\"indicator\\":\\"indicator-1\\"}": Object {
        "dataSet": Object {
          "filters": Array [
            CategoryFilter {
              "category": "Characteristic",
              "group": "Gender",
              "isTotal": false,
              "label": "Gender male",
              "value": "filter-3",
            },
            CategoryFilter {
              "category": "School type",
              "group": "Default",
              "isTotal": false,
              "label": "State-funded primary",
              "value": "filter-2",
            },
          ],
          "indicator": Indicator {
            "group": undefined,
            "label": "Fixed period exclusion rate",
            "unit": "%",
            "value": "indicator-1",
          },
          "location": undefined,
          "timePeriod": TimePeriodFilter {
            "code": "AY",
            "group": undefined,
            "label": "2015/16",
            "value": "2015_AY",
            "year": 2015,
          },
        },
        "value": 2.09,
      },
    },
    "filter": TimePeriodFilter {
      "code": "AY",
      "group": undefined,
      "label": "2015/16",
      "value": "2015_AY",
      "year": 2015,
    },
  },
]
`;
